[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/game_world/GameWorld.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/game_logic/GameViewCamera.gd" type="Script" id=2]

[node name="GameViewCamera" type="Camera2D"]
current = true
drag_margin_left = 0.0
drag_margin_top = 0.0
drag_margin_right = 0.0
drag_margin_bottom = 0.0
script = ExtResource( 2 )

[node name="World" parent="." instance=ExtResource( 1 )]

[node name="Tween" type="Tween" parent="."]

[node name="UILayer" type="CanvasLayer" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="UILayer"]
margin_left = 16.0
margin_top = 16.0
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="UILayer/MarginContainer"]
margin_right = 98.0
margin_bottom = 24.0

[node name="HourDescLabel" type="Label" parent="UILayer/MarginContainer/HBoxContainer"]
margin_top = 5.0
margin_right = 47.0
margin_bottom = 19.0
text = "HOUR: "

[node name="HourLabel" type="Label" parent="UILayer/MarginContainer/HBoxContainer"]
margin_left = 51.0
margin_top = 5.0
margin_right = 59.0
margin_bottom = 19.0
text = "0"
[connection signal="camera_movement" from="." to="." method="_on_GameViewCamera_camera_movement"]
[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
[connection signal="tween_started" from="Tween" to="." method="_on_Tween_tween_started"]
